<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="8.5"
        android:background="@color/backgroundGray"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sembol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textAlignment="center"
            android:text="@string/sembol"
            android:textSize="12sp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/fiyat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/fiyat"
            android:textSize="12sp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/fark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/fark"
            android:textSize="12sp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/hacim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textAlignment="center"
            android:text="@string/hacim"
            android:textSize="12sp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/alis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/alis"
            android:textSize="12sp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/satis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/satis"
            android:textSize="12sp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/degisim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textAlignment="center"
            android:text="@string/degisim"
            android:textSize="11sp"
            android:padding="5dp"/>
    </LinearLayout>
</layout>