<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="8.5"
            android:paddingTop="@dimen/middleMargin"
            android:paddingBottom="@dimen/middleMargin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sembol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textSize="12sp"
                android:padding="5dp"
                android:textAlignment="center"
                android:text="@string/sembol"/>

            <TextView
                android:id="@+id/fiyat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:padding="5dp"
                android:textAlignment="center"
                android:text="@string/fiyat"/>

            <TextView
                android:id="@+id/fark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:padding="5dp"
                android:textAlignment="center"
                android:text="@string/fark"/>

            <TextView
                android:id="@+id/hacim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textSize="12sp"
                android:padding="5dp"
                android:textAlignment="center"
                android:text="@string/hacim"/>

            <TextView
                android:id="@+id/alis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:padding="5dp"
                android:textAlignment="center"
                android:text="@string/alis"/>

            <TextView
                android:id="@+id/satis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:padding="5dp"
                android:textAlignment="center"
                android:text="@string/satis"/>

            <ImageView
                android:id="@+id/degisim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:src="@drawable/ic_baseline_up" />
        </LinearLayout>
</layout>