<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable name="vm" type="com.erenus.vp.imkb.detail.DetailViewModel" />
    </data>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundGray"
            tools:context=".imkb.detail.DetailActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="10">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="4"
                    android:weightSum="2"
                    android:padding="@dimen/middleMargin">
                    <LinearLayout
                        android:id="@+id/block1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="start"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sembolKey"
                                android:layout_margin="@dimen/middleMargin"/>
                            <TextView
                                android:id="@+id/tvSembol"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/middleMargin"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fiyatKey"
                                android:layout_margin="@dimen/middleMargin"/>
                            <TextView
                                android:id="@+id/tvFiyat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/middleMargin"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/farkKey"
                                android:layout_margin="@dimen/middleMargin"/>
                            <TextView
                                android:id="@+id/tvFark"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/middleMargin"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hacimKey"
                                android:layout_margin="@dimen/middleMargin"/>
                            <TextView
                                android:id="@+id/tvHacim"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/middleMargin"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/alisKey"
                                android:layout_margin="@dimen/middleMargin"/>
                            <TextView
                                android:id="@+id/tvAlis"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/middleMargin"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/satisKey"
                                android:layout_margin="@dimen/middleMargin"/>
                            <TextView
                                android:id="@+id/tvSatis"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/middleMargin"/>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/block2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="end"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gunlukDusukKey"
                                android:layout_margin="@dimen/middleMargin"/>
                            <TextView
                                android:id="@+id/tvGunlukDusuk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/middleMargin"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gunlukYuksekKey"
                                android:layout_margin="@dimen/middleMargin"/>
                            <TextView
                                android:id="@+id/tvGunlukYuksek"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/middleMargin"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/adetKey"
                                android:layout_margin="@dimen/middleMargin"/>
                            <TextView
                                android:id="@+id/tvAdet"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/middleMargin"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tavanKey"
                                android:layout_margin="@dimen/middleMargin"/>
                            <TextView
                                android:id="@+id/tvTavan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/middleMargin"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tabanKey"
                                android:layout_margin="@dimen/middleMargin"/>
                            <TextView
                                android:id="@+id/tvTaban"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/middleMargin"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/degisimKey"
                                android:layout_margin="@dimen/middleMargin"/>
                            <ImageView
                                android:id="@+id/degisim"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginEnd="@dimen/middleMargin" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <com.github.mikephil.charting.charts.LineChart
                    android:padding="@dimen/middleMargin"
                    android:id="@+id/lineChart"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="6" />
            </LinearLayout>
            <ProgressBar
                android:id="@+id/pbStockLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}">
            </ProgressBar>
        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>